# Zivo

./: .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 28fbe1a05283_add_passengers_table.py  29ef4ad92c41_init_schema.py  5ae2dcd72a6a_add_created_at_to_bookings.py  a710e8f5cced_add_notify_email_to_price_alerts.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  alerts.py  auth.py  bookings.py  flights.py  passengers.py  profile.py
backend/app/core/: config.py  logging.py  scheduler.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  booking.py  mileage_card.py  passenger.py  price_alert.py  saved_route.py  user.py  user_default.py  user_profile.py
backend/app/schemas/: alert.py  booking.py  flight.py  passenger.py  profile.py  user_default.py
backend/app/services/: alerts.py  cache.py  combo.py  duffel.py  kakao.py  notify_email.py  notify_kakao.py  user.py
backend/tests/: conftest.py  test_alerts.py  test_auth_api.py  test_booking_api.py  test_combo.py  test_day6.py  test_duffel_service.py  test_health.py  test_profile_api.py
backend/tests/fixtures/: duffel_offer_request.json  duffel_offers.json
extension/: .env.production  .eslintrc.cjs  PRIVACY.md  manifest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  (+1 more)
(+66 files in other folders)
